@@ -2,11 +2,12 @@ package cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move;
 
 import cn.iocoder.yudao.framework.common.pojo.CommonResult;
 import cn.iocoder.yudao.framework.common.pojo.PageResult;
+import cn.iocoder.yudao.framework.common.util.collection.StreamX;
 import cn.iocoder.yudao.framework.common.util.object.BeanUtils;
+import cn.iocoder.yudao.framework.excel.core.util.ExcelUtils;
 import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.item.vo.WmsStockBinMoveItemRespVO;
-import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.vo.WmsStockBinMovePageReqVO;
-import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.vo.WmsStockBinMoveRespVO;
-import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.vo.WmsStockBinMoveSaveReqVO;
+import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.item.vo.WmsStockBinMoveItemSaveReqVO;
+import cn.iocoder.yudao.module.wms.controller.admin.stock.bin.move.vo.*;
 import cn.iocoder.yudao.module.wms.dal.dataobject.stock.bin.move.WmsStockBinMoveDO;
 import cn.iocoder.yudao.module.wms.dal.dataobject.stock.bin.move.item.WmsStockBinMoveItemDO;
 import cn.iocoder.yudao.module.wms.service.stock.bin.move.WmsStockBinMoveService;
@@ -17,19 +18,23 @@ import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.annotation.Resource;
 import jakarta.validation.Valid;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-import java.util.Arrays;
+import org.springframework.web.bind.annotation.*;
+
+import java.io.IOException;
+import java.io.InputStream;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+
 import static cn.iocoder.yudao.framework.common.exception.util.ServiceExceptionUtil.exception;
 import static cn.iocoder.yudao.framework.common.pojo.CommonResult.success;
-import static cn.iocoder.yudao.module.wms.enums.ErrorCodeConstants.STOCK_BIN_MOVE_NOT_EXISTS;
+import static cn.iocoder.yudao.module.wms.enums.WmsErrorCodeConstants.*;
 
 @Tag(name = "库位移动")
 @RestController
@@ -90,7 +95,7 @@ public class WmsStockBinMoveController {
         // 组装库位移动详情
         List<WmsStockBinMoveItemDO> stockBinMoveItemList = stockBinMoveItemService.selectByBinMoveId(stockBinMoveVO.getId());
         stockBinMoveVO.setItemList(BeanUtils.toBean(stockBinMoveItemList, WmsStockBinMoveItemRespVO.class));
-        stockBinMoveService.assembleWarehouse(Arrays.asList(stockBinMoveVO));
+        stockBinMoveService.assembleWarehouse(List.of(stockBinMoveVO));
         stockBinMoveItemService.assembleBin(stockBinMoveVO.getItemList());
         stockBinMoveItemService.assembleProduct(stockBinMoveVO.getItemList());
         // 返回
@@ -112,6 +117,7 @@ public class WmsStockBinMoveController {
         // 返回
         return success(voPageResult);
     }
+
     // @GetMapping("/export-excel")
     // @Operation(summary = "导出库位移动 Excel")
     // @PreAuthorize("@ss.hasPermission('wms:stock-bin-move:export')")
@@ -122,4 +128,56 @@ public class WmsStockBinMoveController {
     // // 导出 Excel
     // ExcelUtils.write(response, "库位移动.xls", "数据", WmsStockBinMoveRespVO.class, BeanUtils.toBean(list, WmsStockBinMoveRespVO.class));
     // }
-}
+    @PostMapping("/import-excel")
+    @Operation(summary = "导入产品库位移动清单")
+    @PreAuthorize("@ss.hasPermission('wms:stock-bin-move:import')")
+    public CommonResult<Boolean> importExcel(@Valid @RequestBody WmsStockBinMoveImportVO importReqVO) throws Exception {
+        // 
+        List<WmsStockBinMoveImportExcelVO> impVOList = ExcelUtils.read(importReqVO.getFile(), WmsStockBinMoveImportExcelVO.class);
+        // 识别代码
+        stockBinMoveItemService.assembleWarehouseForImp(impVOList);
+        stockBinMoveItemService.assembleBinForImp(impVOList);
+        stockBinMoveItemService.assembleProductForImp(impVOList);
+        Set<Long> warehouseIds = StreamX.from(impVOList).filter(Objects::nonNull).toSet(WmsStockBinMoveImportExcelVO::getWarehouseId);
+        if (warehouseIds.size() != 1) {
+            throw exception(STOCK_BIN_MOVE_SINGLE_WAREHOUSE_ALLOW);
+        }
+        for (WmsStockBinMoveImportExcelVO excelVO : impVOList) {
+            if (excelVO.getToBinId() == null) {
+                throw exception(STOCK_BIN_MOVE_ITEM_TO_BIN_ERROR);
+            }
+            if (excelVO.getFromBinId() == null) {
+                throw exception(STOCK_BIN_MOVE_ITEM_FROM_BIN_ERROR);
+            }
+            if (excelVO.getProductId() == null) {
+                throw exception(STOCK_BIN_MOVE_ITEM_PRODUCT_ERROR, excelVO.getProductCode());
+            }
+        }
+        WmsStockBinMoveSaveReqVO saveReqVO = new WmsStockBinMoveSaveReqVO();
+        saveReqVO.setWarehouseId(warehouseIds.iterator().next());
+        saveReqVO.setItemList(BeanUtils.toBean(impVOList, WmsStockBinMoveItemSaveReqVO.class));
+        stockBinMoveService.createStockBinMove(saveReqVO);
+        return success(true);
+    }
+
+    @GetMapping("/download-template")
+    @Operation(summary = "下载模板 批量库位")
+    @PreAuthorize("@ss.hasPermission('wms:stock-bin-move:download-template')")
+    public ResponseEntity<byte[]> downloadExcelTemplate() throws IOException {
+        ClassPathResource resource = new ClassPathResource("templates/stockCheck-bin-import.xlsx");
+        byte[] fileContent;
+        try (InputStream inputStream = resource.getInputStream()) {
+            fileContent = inputStream.readAllBytes();
+        }
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.parseMediaType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"));
+        // 设置文件名
+        String fileName = "批量库位模板.xlsx";
+        headers.set(HttpHeaders.CONTENT_DISPOSITION,
+                "attachment; filename=\"" + fileName + "\"");
+
+        return ResponseEntity.ok()
+                .headers(headers)
+                .body(fileContent);
+    }
+}
